# engram

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  db.rs  embed.rs  index.rs  main.rs
