[package]
name = "engram"
version = "0.1.0"
edition = "2021"
description = "Fast, portable knowledge base CLI with semantic search"
license = "MIT"
repository = "https://github.com/pureclaw/engram"
keywords = ["knowledge-base", "search", "embeddings", "sqlite", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Database — bundled SQLite so no system dep required
rusqlite = { version = "0.31", features = ["bundled"] }

# Vector search extension
sqlite-vec = "0.1"

# HTTP client for embedding API calls
ureq = { version = "2", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# File traversal
walkdir = "2"

# Home directory resolution
dirs = "5"

# Progress bars
indicatif = "0.17"

# Hashing for change detection
blake3 = "1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
